fixed alignment issue with game details

--- a/css/index.css
+++ b/css/index.css
@@ -144,7 +144,7 @@ header {
     justify-content: space-evenly;
 }
 
-.game-info > * {
+.game-info p {
     padding: 0 2rem;
     text-align: center;
 }
@@ -159,7 +159,7 @@ header {
 
 .game-info li {
     display: inline;
-    margin: 0 0.75rem;
+    margin: 0 0.5rem;
 }
 
 .game-info img {
@@ -167,9 +167,9 @@ header {
     width: 2rem;
     filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(131deg) brightness(103%) contrast(101%);
     vertical-align: middle;
+    padding: 0 0.1rem;
     position: relative;
     bottom: 0.1rem;
-    margin-right: 0.4rem;
 }
 
 /* Similar Games -------------------------------------------------------------------- */
@@ -280,10 +280,6 @@ footer {
     .game-info h1 {
         font-size: 2.5rem;
     }
-
-    /* .game-info ul {
-        margin-bottom: 3rem;
-    } */
 
     .game-info li {
         display: block;
